--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "new-component": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-icons-kit": "^2.0.0",
     "react-motion": "^0.5.2",
     "react-scripts": "5.0.1",
