--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "framer-motion": "^10.12.21",
     "new-component": "^5.0.2",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons-kit": "^2.0.0",
+    "react-image-gallery": "^1.3.0",
     "react-motion": "^0.5.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.3",
