--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons-kit": "^2.0.0",
     "react-image-gallery": "^1.3.0",
     "react-motion": "^0.5.2",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.4"
