--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-motion": "^0.5.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.4"
   },
